--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -37,26 +37,26 @@ jobs:
       # # FRONTEND SETUP
       # # ------------------------------
       - name: Clean npm cache & remove existing dependencies
-        working-directory: ./src
+        working-directory: src
         run: |
           rm -rf node_modules package-lock.json
           npm cache clean --force
 
       - name: Install frontend dependencies
-        working-directory: ./src
+        working-directory: src
         run: npm install
 
       - name: Create frontend .env file
-        working-directory: ./src
+        working-directory: src
         run: |
           touch .env
           echo "${{ secrets.PROD_FRONTEND_ENV }}" > .env
 
       - name: Build frontend
-        working-directory: ./src
+        working-directory: src
         run: npm run build
 
       - name: Deploy frontend to Nginx
         run: |
           sudo rm -rf /var/www/html/*
-          sudo cp -r ./client/dist/* /var/www/html/
+          sudo cp -r src/dist/* /var/www/html/
