--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -34,7 +34,7 @@ jobs:
       # # FRONTEND SETUP
       # # ------------------------------
       - name: Clean npm cache & remove existing dependencies
-        working-directory: src
+        # working-directory: src
         run: |
           rm -rf node_modules package-lock.json
           npm cache clean --force
