--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: |
-            src/package-lock.json
+          # cache-dependency-path: |
+          #   src/package-lock.json
 
       # # ------------------------------
       # # FRONTEND SETUP
