--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@
 .env.test.local
 .env.production.local
 
+
+# dotenv environment variables
+.env
+.env.*.local
+
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
