--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,56 +1,56 @@
-# name: Deploy REACT App on nginx
+name: Deploy REACT App on nginx
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# permissions:
-#   id-token: write
-#   contents: read
-#   issues: write
+permissions:
+  id-token: write
+  contents: read
+  issues: write
 
-# jobs:
-#   deploy:
-#     runs-on: self-hosted
-#     environment: PROD_FRONTEND_ENV
-#     env:
-#       REACT_APP_API: ${{secrets.REACT_APP_API}}
+jobs:
+  deploy:
+    runs-on: self-hosted
+    environment: PROD_FRONTEND_ENV
+    env:
+      REACT_APP_API: ${{secrets.REACT_APP_API}}
 
-#     strategy:
-#       matrix:
-#         node-version: [22.x]
+    strategy:
+      matrix:
+        node-version: [22.x]
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-#       - name: Use Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#           cache: "npm"
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
 
-#       - name: Clean npm cache & remove existing dependencies
-#         run: |
-#           rm -rf node_modules package-lock.json
-#           npm cache clean --force
+      - name: Clean npm cache & remove existing dependencies
+        run: |
+          rm -rf node_modules package-lock.json
+          npm cache clean --force
 
-#       - name: Install frontend dependencies
-#         run: npm install -f
+      - name: Install frontend dependencies
+        run: npm install -f
 
-#       - name: Create frontend .env file
-#         run: |
-#           echo "REACT_APP_API=${REACT_APP_API}" > .env
-#           echo "Created .env with:"
-#           cat .env
+      - name: Create frontend .env file
+        run: |
+          echo "REACT_APP_API=${REACT_APP_API}" > .env
+          echo "Created .env with:"
+          cat .env
 
-#       - name: Build frontend
-#         run: npm run build
+      - name: Build frontend
+        run: npm run build
 
-#       - name: Deploy frontend to Nginx
-#         run: |
-#           sudo rm -rf /var/www/html/*
-#           sudo cp -r build/* /var/www/html/
+      - name: Deploy frontend to Nginx
+        run: |
+          sudo rm -rf /var/www/html/*
+          sudo cp -r build/* /var/www/html/
 
-#           #dist
+          #dist
