--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install frontend dependencies
         run: rm -rf node_modules
-          npm install --no-audit --legacy-peer-deps
+          npm install -f
 
       - name: Create frontend .env file
         run: |
