--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -31,7 +31,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [18.x]
 
     steps:
       - name: Checkout code
@@ -52,9 +52,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-${{ matrix.node-version }}-
 
-      - name: Install frontend dependencies
-        run: rm -rf node_modules
-          npm install -f
+      # - name: Install frontend dependencies
+      #   run: rm -rf node_modules
+      #     npm install -f
+
+      - name: Install dependencies
+        run: |
+          rm -rf node_modules
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install -f
+          fi
 
       - name: Create frontend .env file
         run: |
