--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^19.1.9"
+    "@types/react": "^19.1.9",
+    "react-scripts": "^5.0.1"
   }
 }
