--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -74,3 +74,4 @@ jobs:
         run: |
           sudo rm -rf /var/www/html/*
           sudo cp -r build/* /var/www/html/
+          sudo chown -R www-data:www-data /var/www/html
