--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,85 +1,82 @@
-name: Deploy REACT App on nginx
+name: Deploy React to Nginx (self-hosted)
 
 on:
   push:
     branches: [main]
 
 permissions:
-  id-token: write
   contents: read
-  issues: write
-
-concurrency:
-  group: frontend-deploy
-  cancel-in-progress: true
+  id-token: write
 
 jobs:
-  deploy:
+  build_deploy:
     runs-on: self-hosted
-    environment: PROD_FRONTEND_ENV
+    timeout-minutes: 45
+
     env:
       REACT_APP_API: ${{ secrets.REACT_APP_API }}
       CI: true
       NPM_CONFIG_AUDIT: false
       NPM_CONFIG_FUND: false
-      # Temporary guard until your deps are aligned:
-      NPM_CONFIG_LEGACY_PEER_DEPS: true
-      # CRA-only: speeds build & smaller output. Harmless if unused.
-      GENERATE_SOURCEMAP: "false"
-      # If memory is tight during minify:
+      GENERATE_SOURCEMAP: false
       NODE_OPTIONS: --max_old_space_size=2048
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
+          node-version: 18
+          cache: "npm"
           cache-dependency-path: package-lock.json
 
-      # - name: Install frontend dependencies
-      #   run: |
-      #     npm config set legacy-peer-deps true
-      #     npm install
-
-      - name: Install dependencies
+      - name: Prep npm (fast + loud)
         run: |
+          npm config set fund false
+          npm config set audit false
+          npm config set progress false
+          npm config set fetch-retry-maxtimeout 60000
+          npm config set fetch-retry-mintimeout 5000
+          npm config set fetch-retries 5
+          npm config set registry "https://registry.npmjs.org/"
+          npm ping || true
+          node --version
+          npm --version
+          curl -I https://registry.npmjs.org || true
+
+      - name: Install dependencies (instrumented)
+        run: |
+          set -euo pipefail
+          ( while true; do echo "[keep-alive] installing @ $(date)"; sleep 60; done ) &
+          KPID=$!
           if [ -f package-lock.json ]; then
-            npm ci
+            timeout 12m npm ci --loglevel=verbose --prefer-offline --no-audit --fund=false || (kill $KPID; exit 1)
           else
-            npm install
+            timeout 12m npm install --loglevel=verbose --prefer-offline --no-audit --fund=false || (kill $KPID; exit 1)
           fi
+          kill $KPID
 
-      # - name: Install dependencies
-      #   run: |
-      #     rm -rf node_modules
-      #     if [ -f package-lock.json ]; then
-      #       npm ci
-      #     else
-      #       npm install -f
-      #     fi
-
-      - name: Create frontend .env file
+      - name: Build (instrumented)
         run: |
-          echo "REACT_APP_API=${REACT_APP_API}" > .env
-          echo "Created .env:"
-          cat .env
+          set -euo pipefail
+          ( while true; do echo "[keep-alive] building @ $(date)"; sleep 60; done ) &
+          KPID=$!
+          timeout 15m npm run build || (kill $KPID; exit 1)
+          kill $KPID
+        env:
+          NODE_OPTIONS: --max_old_space_size=2048
+          CI: true
 
-      - name: Build frontend
+      - name: Deploy to Nginx
         run: |
-          echo "Starting build..."
-          npm run build
-          echo "Build done."
-
-      - name: Deploy frontend to Nginx
-        run: |
+          sudo mkdir -p /var/www/html
           sudo rm -rf /var/www/html/*
           sudo cp -r build/* /var/www/html/
           sudo chown -R www-data:www-data /var/www/html
+          sudo systemctl reload nginx || sudo systemctl restart nginx
+
+      - name: Smoke test
+        run: |
+          curl -I http://localhost | head -n 1 || true
