--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^5.0.4",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "react": "^19.1.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.30.1",
     "typescript": "^4.9.5",
+    "vite": "^7.1.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
