--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -12,10 +12,11 @@ permissions:
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: PROD_FRONTEND_ENV
+
     env:
-      REACT_APP_API: ${{secrets.REACT_APP_API}}
+      REACT_APP_API: ${{ secrets.REACT_APP_API }}
 
     strategy:
       matrix:
@@ -31,26 +32,41 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Clean npm cache & remove existing dependencies
+      - name: Setup SSH
         run: |
-          rm -rf node_modules package-lock.json
-          npm cache clean --force
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
 
-      - name: Install frontend dependencies
-        run: npm install -f
-
-      - name: Create frontend .env file
+      - name: Deploy Frontend on EC2
         run: |
-          echo "REACT_APP_API=${REACT_APP_API}" > .env
-          echo "Created .env with:"
-          cat .env
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            set -e
 
-      - name: Build frontend
-        run: |
-          npm install --save-dev ajv@^7
-          npm run build
+            cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
 
-      - name: Deploy frontend to Nginx
-        run: |
-          sudo rm -rf /var/www/html/*
-          sudo cp -r build/* /var/www/html/
+            echo "Cleaning cache..."
+            rm -rf node_modules package-lock.json
+            npm cache clean --force
+
+            echo "Installing dependencies..."
+            npm install -f
+
+            echo "Creating .env"
+            echo "REACT_APP_API=${REACT_APP_API}" > .env
+            cat .env
+
+            echo "Building frontend"
+            npm install --save-dev ajv@^7
+            npm run build
+
+            echo "Deploying to Nginx"
+            sudo rm -rf /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/*
+            sudo cp -r dist/* /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
+
+            sudo nginx -t
+            sudo systemctl reload nginx
+
+            echo "Frontend deployed successfully!"
+          EOF
