--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,6 +40,17 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
 
+      - name: SSH into EC2 and test connection
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
+          chmod 600 ~/.ssh/gh-ec2-ci
+
+          ssh -o StrictHostKeyChecking=no \
+              -i ~/.ssh/gh-ec2-ci \
+              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+              "echo '✅ Connected from GitHub Actions!'"
+
       - name: Deploy Frontend on EC2
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
