rerun gihub runner 2

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
+          chmod 700 ~/.ssh
           chmod 600 ~/.ssh/gh-ec2-ci
 
           ssh -o StrictHostKeyChecking=no \
