--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -32,29 +32,32 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Setup SSH
+      - name: Setup SSH (agent + known_hosts)
         run: |
+          # Ensure ssh-agent & client
+          command -v ssh-agent >/dev/null || (sudo apt-get update -y && sudo apt-get install -y openssh-client)
+
+          eval "$(ssh-agent -s)"
+
+          # Add private key from GitHub secret (same as your ID_RSA)
+          echo "${{ secrets.EC2_SSH_KEY }}" | tr -d '\r' | ssh-add -
+
+          # SSH config dir + known_hosts
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          printf "%s\n" "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+
           ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
 
       - name: SSH into EC2 and test connection
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
-          chmod 700 ~/.ssh
-          chmod 600 ~/.ssh/gh-ec2-ci
-
           ssh -o StrictHostKeyChecking=no \
-              -i ~/.ssh/gh-ec2-ci \
-              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
-              "echo '✅ Connected from GitHub Actions!'"
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+            "echo '✅ Connected from GitHub Actions!'"
 
       - name: Deploy Frontend on EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             set -e
 
             cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
@@ -67,7 +70,8 @@ jobs:
             npm install -f
 
             echo "Creating .env"
-            echo "REACT_APP_API=${{secrets.REACT_APP_API}}" > .env
+            # Use job-level env var (already set in env:)
+            echo "REACT_APP_API=$REACT_APP_API" > .env
             cat .env
 
             echo "Building frontend"
