--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -32,58 +32,57 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Setup SSH (agent + known_hosts)
+      - name: Setup SSH key and known_hosts
         run: |
-          # Ensure ssh-agent & client
-          command -v ssh-agent >/dev/null || (sudo apt-get update -y && sudo apt-get install -y openssh-client)
-
-          eval "$(ssh-agent -s)"
-
-          # Add private key from GitHub secret (same as your ID_RSA)
-          echo "${{ secrets.EC2_SSH_KEY }}" | tr -d '\r' | ssh-add -
-
-          # SSH config dir + known_hosts
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
 
-          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+          # Write private key from secret into a file
+          printf "%s\n" "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
+          chmod 600 ~/.ssh/gh-ec2-ci
+
+          # Add EC2 host key (you *can* specify ed25519 here if you want)
+          ssh-keyscan -t ed25519 "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts || \
+          ssh-keyscan "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
 
       - name: SSH into EC2 and test connection
         run: |
           ssh -o StrictHostKeyChecking=no \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
-            "echo '✅ Connected from GitHub Actions!'"
+              -i ~/.ssh/gh-ec2-ci \
+              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+              "echo '✅ Connected from GitHub Actions!'"
 
       - name: Deploy Frontend on EC2
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
+          ssh -o StrictHostKeyChecking=no \
+              -i ~/.ssh/gh-ec2-ci \
+              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             set -e
 
-            cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+           cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
 
-            echo "Cleaning cache..."
-            rm -rf node_modules package-lock.json
-            npm cache clean --force
+          echo "Cleaning cache..."
+          rm -rf node_modules package-lock.json
+          npm cache clean --force
 
-            echo "Installing dependencies..."
-            npm install -f
+          echo "Installing dependencies..."
+          npm install -f
 
-            echo "Creating .env"
-            # Use job-level env var (already set in env:)
-            echo "REACT_APP_API=$REACT_APP_API" > .env
-            cat .env
+          echo "Creating .env"
+          echo "REACT_APP_API=$REACT_APP_API" > .env
+          cat .env
 
-            echo "Building frontend"
-            npm install --save-dev ajv@^7
-            npm run build
+          echo "Building frontend"
+          npm install --save-dev ajv@^7
+          npm run build
 
-            echo "Deploying to Nginx"
-            sudo rm -rf /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/*
-            sudo cp -r dist/* /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
+          echo "Deploying to Nginx"
+          sudo rm -rf /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/*
+          sudo cp -r dist/* /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
 
-            sudo nginx -t
-            sudo systemctl reload nginx
+          sudo nginx -t
+          sudo systemctl reload nginx
 
-            echo "Frontend deployed successfully!"
+          echo "Frontend deployed successfully!"
           EOF
