rerun gihub runner 6

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -41,9 +41,8 @@ jobs:
           printf "%s\n" "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
           chmod 600 ~/.ssh/gh-ec2-ci
 
-          # Add EC2 host key (you *can* specify ed25519 here if you want)
-          ssh-keyscan -t ed25519 "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts || \
-          ssh-keyscan "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+          # Add EC2 host to known_hosts
+          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
 
       - name: SSH into EC2 and test connection
@@ -60,29 +59,29 @@ jobs:
               ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             set -e
 
-           cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+            cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
 
-          echo "Cleaning cache..."
-          rm -rf node_modules package-lock.json
-          npm cache clean --force
+            echo "Cleaning cache..."
+            rm -rf node_modules package-lock.json
+            npm cache clean --force
 
-          echo "Installing dependencies..."
-          npm install -f
+            echo "Installing dependencies..."
+            npm install -f
 
-          echo "Creating .env"
-          echo "REACT_APP_API=$REACT_APP_API" > .env
-          cat .env
+            echo "Creating .env"
+            echo "REACT_APP_API=$REACT_APP_API" > .env
+            cat .env
 
-          echo "Building frontend"
-          npm install --save-dev ajv@^7
-          npm run build
+            echo "Building frontend"
+            npm install --save-dev ajv@^7
+            npm run build
 
-          echo "Deploying to Nginx"
-          sudo rm -rf /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/*
-          sudo cp -r dist/* /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
+            echo "Deploying to Nginx"
+            sudo rm -rf /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/*
+            sudo cp -r dist/* /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
 
-          sudo nginx -t
-          sudo systemctl reload nginx
+            sudo nginx -t
+            sudo systemctl reload nginx
 
-          echo "Frontend deployed successfully!"
+            echo "Frontend deployed successfully!"
           EOF
