--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -42,14 +42,9 @@ jobs:
 
       - name: SSH into EC2 and test connection
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
-          chmod 400 ~/.ssh/gh-ec2-ci
-
-          ssh -o StrictHostKeyChecking=no \
-              -i ~/.ssh/gh-ec2-ci \
-              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
-              "echo '✅ Connected from GitHub Actions!'"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+            "echo '✅ Connected from GitHub Actions!'"
 
       - name: Deploy Frontend on EC2
         run: |
