--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,76 +8,61 @@ on:
 permissions:
   id-token: write
   contents: read
-  issues: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: PROD_FRONTEND_ENV
 
     env:
       REACT_APP_API: ${{ secrets.REACT_APP_API }}
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          printf "%s\n" "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          printf "%s\n" "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/gh-ec2-ci
+          chmod 600 ~/.ssh/gh-ec2-ci
           ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
 
-      - name: SSH into EC2 and test connection
+      - name: Test SSH Connection
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+            "echo '🚀 GitHub CI Connected Successfully!'"
 
-      - name: Deploy Frontend on EC2
+      - name: Deploy Frontend to EC2 via SSH
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
-              set -e
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            set -e
 
-              cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+            cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
 
-              echo "Getting latest code..."
-              git fetch --all
-              git reset --hard origin/main
+            echo "Pulling latest code"
+            git fetch --all
+            git reset --hard origin/main
 
-              echo "Cleaning cache..."
-              rm -rf node_modules package-lock.json
-              npm cache clean --force
+            echo "Installing Dependencies"
+            npm install --force
 
-              echo "Installing dependencies..."
-              npm install -f
+            echo "Generating .env"
+            echo "REACT_APP_API=${{ secrets.REACT_APP_API }}" > .env
 
-              echo "Creating .env"
-              echo "REACT_APP_API=$REACT_APP_API" > .env
-              cat .env
+            echo "Building Frontend"
+            npm run build
 
-              echo "Building frontend"
-              npm install --save-dev ajv@^7
-              npm run build
+            echo "Updating Build Folder"
+            mkdir -p build
+            rm -rf build/*
+            cp -r dist/* build/
 
-              echo "Deploying to Nginx"
-              sudo rm -rf /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/*
-              sudo cp -r build/* /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend/build/
+            echo "Reloading Nginx"
+            sudo nginx -t
+            sudo systemctl reload nginx
 
-              sudo nginx -t
-              sudo systemctl reload nginx
-
-              echo "Frontend deployed successfully!"
+            echo "✨ Deployment Completed Successfully!"
           EOF
