--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -45,37 +45,33 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
 
+      - name: Clean npm cache & remove existing dependencies
+        run: |
+          rm -rf node_modules package-lock.json
+          npm cache clean --force
+
+      - name: Install frontend dependencies
+        run: npm install -f
+
+      - name: Create frontend .env file
+        run: |
+          echo "REACT_APP_API=${REACT_APP_API}" > .env
+          echo "Created .env with:"
+          cat .env
+
+      - name: Build frontend
+        run: |
+          npm install --save-dev ajv@^7
+          npm run build
+
       - name: Deploy Frontend on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
               set -e
 
-              cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
-
-              echo "Getting latest code..."
-              git fetch --all
-              git reset --hard origin/main
-
-              echo "Cleaning cache..."
-              rm -rf node_modules package-lock.json
-              npm cache clean --force
-
-              echo "Installing dependencies..."
-              npm install -f
-
-              echo "Creating .env"
-              echo "REACT_APP_API=$REACT_APP_API" > .env
-              cat .env
-
-              echo "Building frontend"
-              npm install --save-dev ajv@^7
-              npm run build
-
-              echo "Deploying to Nginx"
-              sudo rm -rf build/*
-              sudo cp -r build/* build/
-
+              # cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+              
               sudo nginx -t
               sudo systemctl reload nginx
 
