--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           rm -rf node_modules package-lock.json
           npm cache clean --force
+          npm audit fix --force
 
       - name: Install frontend dependencies
         run: npm install -f
