--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -47,11 +47,14 @@ jobs:
 
       - name: Clean npm cache & remove existing dependencies
         run: |
+          cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
           rm -rf node_modules package-lock.json
           npm cache clean --force
 
       - name: Install frontend dependencies
-        run: npm install -f
+        run: |
+          cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
+          npm install -f
 
       - name: Create frontend .env file
         run: |
@@ -61,6 +64,7 @@ jobs:
 
       - name: Build frontend
         run: |
+          cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
           npm install --save-dev ajv@^7
           npm run build
 
@@ -69,8 +73,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/gh-ec2-ci \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
               set -e
-
-              # cd /var/www/meditation-frontend/Personalised-Visual-Meditation-Guide-Frontend
               
               sudo nginx -t
               sudo systemctl reload nginx
